--- a/hw2/hw2_abtest.ipynb
+++ b/hw2/hw2_abtest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,15 +11,340 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('./data/marketing_AB.csv', index_col=[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 588101 entries, 0 to 588100\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column         Non-Null Count   Dtype \n",
+      "---  ------         --------------   ----- \n",
+      " 0   user id        588101 non-null  int64 \n",
+      " 1   test group     588101 non-null  object\n",
+      " 2   converted      588101 non-null  bool  \n",
+      " 3   total ads      588101 non-null  int64 \n",
+      " 4   most ads day   588101 non-null  object\n",
+      " 5   most ads hour  588101 non-null  int64 \n",
+      "dtypes: bool(1), int64(3), object(2)\n",
+      "memory usage: 27.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user id</th>\n",
+       "      <th>test group</th>\n",
+       "      <th>converted</th>\n",
+       "      <th>total ads</th>\n",
+       "      <th>most ads day</th>\n",
+       "      <th>most ads hour</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>58814</th>\n",
+       "      <td>1244471</td>\n",
+       "      <td>ad</td>\n",
+       "      <td>False</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>250805</th>\n",
+       "      <td>1085734</td>\n",
+       "      <td>ad</td>\n",
+       "      <td>False</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61474</th>\n",
+       "      <td>1160983</td>\n",
+       "      <td>ad</td>\n",
+       "      <td>False</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>478388</th>\n",
+       "      <td>1080922</td>\n",
+       "      <td>ad</td>\n",
+       "      <td>False</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>522077</th>\n",
+       "      <td>1068383</td>\n",
+       "      <td>ad</td>\n",
+       "      <td>False</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82167</th>\n",
+       "      <td>1025675</td>\n",
+       "      <td>ad</td>\n",
+       "      <td>False</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82130</th>\n",
+       "      <td>1130001</td>\n",
+       "      <td>ad</td>\n",
+       "      <td>False</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>498390</th>\n",
+       "      <td>1624988</td>\n",
+       "      <td>ad</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>473899</th>\n",
+       "      <td>1527073</td>\n",
+       "      <td>ad</td>\n",
+       "      <td>False</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171797</th>\n",
+       "      <td>1141601</td>\n",
+       "      <td>ad</td>\n",
+       "      <td>False</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        user id test group  converted  total ads most ads day  most ads hour\n",
+       "58814   1244471         ad      False         21       Sunday              9\n",
+       "250805  1085734         ad      False         15     Saturday             13\n",
+       "61474   1160983         ad      False         28       Friday             17\n",
+       "478388  1080922         ad      False         10     Thursday             19\n",
+       "522077  1068383         ad      False         14     Thursday             21\n",
+       "82167   1025675         ad      False         22       Monday             21\n",
+       "82130   1130001         ad      False         29       Monday             19\n",
+       "498390  1624988         ad      False          3     Saturday             13\n",
+       "473899  1527073         ad      False          7       Monday             15\n",
+       "171797  1141601         ad      False         23       Friday             18"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Результаты анализа:\n",
+      "{'control_group': {'visits': 23524, 'total_conversions': 420}, 'test_group': {'visits': 564577, 'total_conversions': 14423}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Разделяем на контрольную и тестовую группы\n",
+    "control_group = df[df[\"test group\"] == \"psa\"]\n",
+    "test_group = df[df[\"test group\"] == \"ad\"]\n",
+    "\n",
+    "# Рассчитываем метрики\n",
+    "metrics = {\n",
+    "    \"control_group\": {\n",
+    "        \"visits\": len(control_group),  # Количество посещений\n",
+    "        \"total_conversions\": control_group[\"converted\"].sum()  # Суммарное количество покупок\n",
+    "    },\n",
+    "    \"test_group\": {\n",
+    "        \"visits\": len(test_group),  # Количество посещений\n",
+    "        \"total_conversions\": test_group[\"converted\"].sum()  # Суммарное количество покупок\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# Вывод результатов\n",
+    "print(\"Результаты анализа:\")\n",
+    "print(metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Информация о датасете:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 588101 entries, 0 to 588100\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column         Non-Null Count   Dtype \n",
+      "---  ------         --------------   ----- \n",
+      " 0   user id        588101 non-null  int64 \n",
+      " 1   test group     588101 non-null  object\n",
+      " 2   converted      588101 non-null  bool  \n",
+      " 3   total ads      588101 non-null  int64 \n",
+      " 4   most ads day   588101 non-null  object\n",
+      " 5   most ads hour  588101 non-null  int64 \n",
+      "dtypes: bool(1), int64(3), object(2)\n",
+      "memory usage: 27.5+ MB\n",
+      "None\n",
+      "\n",
+      "Пример данных:\n",
+      "   user id test group  converted  total ads most ads day  most ads hour\n",
+      "0  1069124         ad      False        130       Monday             20\n",
+      "1  1119715         ad      False         93      Tuesday             22\n",
+      "2  1144181         ad      False         21      Tuesday             18\n",
+      "3  1435133         ad      False        355      Tuesday             10\n",
+      "4  1015700         ad      False        276       Friday             14\n",
+      "\n",
+      "Количество пропусков по столбцам:\n",
+      "user id          0\n",
+      "test group       0\n",
+      "converted        0\n",
+      "total ads        0\n",
+      "most ads day     0\n",
+      "most ads hour    0\n",
+      "dtype: int64\n",
+      "\n",
+      "Количество пользователей, попавших в обе группы: 0\n",
+      "\n",
+      "Проверка пересечений после удаления:\n",
+      "Количество пользователей, попавших в обе группы после очистки: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Исследование структуры данных\n",
+    "print(\"Информация о датасете:\")\n",
+    "print(df.info())  # Общая информация о столбцах\n",
+    "print(\"\\nПример данных:\")\n",
+    "print(df.head())  # Первые строки для анализа структуры\n",
+    "\n",
+    "# 2. Преобразование столбцов к необходимым типам данных\n",
+    "# Преобразование столбца converted в тип bool (если это строка или другие значения)\n",
+    "if df[\"converted\"].dtype != \"bool\":\n",
+    "    df[\"converted\"] = df[\"converted\"].astype(bool)\n",
+    "\n",
+    "# Преобразование total_ads в целые числа\n",
+    "if df[\"total ads\"].dtype != \"int64\":\n",
+    "    df[\"total ads\"] = df[\"total ads\"].astype(int)\n",
+    "\n",
+    "# 3. Проверка на наличие пропусков\n",
+    "print(\"\\nКоличество пропусков по столбцам:\")\n",
+    "print(df.isnull().sum())\n",
+    "\n",
+    "# Удаление строк с пропусками (если они критичны для анализа)\n",
+    "df = df.dropna()\n",
+    "\n",
+    "# 4. Проверка на пересечение пользователей между группами\n",
+    "# Создаем два поднабора данных: контрольная группа и тестовая группа\n",
+    "control_group = df[df[\"test group\"] == \"psa\"]\n",
+    "test_group = df[df[\"test group\"] == \"ad\"]\n",
+    "\n",
+    "# Ищем пользователей, которые находятся в обеих группах\n",
+    "overlap_users = set(control_group[\"user id\"]).intersection(set(test_group[\"user id\"]))\n",
+    "print(\"\\nКоличество пользователей, попавших в обе группы:\", len(overlap_users))\n",
+    "\n",
+    "# Исключаем пользователей, попавших в обе группы\n",
+    "df = df[~df[\"user id\"].isin(overlap_users)]\n",
+    "\n",
+    "# Проверяем, что пересечения больше нет\n",
+    "print(\"\\nПроверка пересечений после удаления:\")\n",
+    "control_group = df[df[\"test group\"] == \"psa\"]\n",
+    "test_group = df[df[\"test group\"] == \"ad\"]\n",
+    "overlap_users = set(control_group[\"user id\"]).intersection(set(test_group[\"user id\"]))\n",
+    "print(\"Количество пользователей, попавших в обе группы после очистки:\", len(overlap_users))"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
